# commit-boost-client

./: Cargo.toml  config.example.toml  justfile  stainless.yml
.github/workflows/: ci.yml
api/: greenfield-platform.yml  signer-api.yml  signer-sdk-validation-checklist.md
benches/pbs/src/: main.rs
crates/cli/src/: docker_init.rs
crates/common/: Cargo.toml
crates/common/src/: types.rs  utils.rs
crates/common/src/config/: mux.rs  pbs.rs
crates/common/src/pbs/: relay.rs
crates/common/src/signer/: loader.rs  store.rs
crates/greenfield/: Cargo.toml  README.md
crates/greenfield/src/: api_gateway.rs  config.rs  lib.rs  observability.rs  pbs_engine.rs  policies.rs  relay.rs  signer_engine.rs  types.rs
crates/greenfield/src/testkit/: fake_relay.rs  mod.rs
crates/pbs/: Cargo.toml
crates/pbs/src/: api.rs  metrics.rs  service.rs
crates/pbs/src/mev_boost/: get_header.rs  register_validator.rs  status.rs  submit_block.rs
crates/pbs/src/routes/: mod.rs  register_validator.rs  router.rs
crates/signer/src/: service.rs
docs/: sidebars.js
docs/docs/developing/: property-testing.md
docs/docs/get_started/: configuration.md
tests/: Cargo.toml
tests/data/configs/: pbs.happy.toml
tests/src/: lib.rs  mock_relay.rs  mock_validator.rs  register_validator_model.rs  utils.rs
tests/tests/: config.rs  mock_relay_registration_api.rs  mock_validator_registration_client.rs  payloads.rs  pbs_cfg_file_update.rs  pbs_get_status.rs  pbs_mux.rs  pbs_post_validators.rs  pbs_register_validator_state_machine.proptest-regressions  pbs_register_validator_state_machine.rs
(+2 files in other folders)
