[package]
name = "cb-greenfield"
edition.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
async-trait.workspace = true
axum.workspace = true
bytes.workspace = true
clap.workspace = true
eyre.workspace = true
parking_lot.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
proptest.workspace = true

[[bin]]
name = "commit-boost-greenfield"
path = "src/bin/greenfield.rs"
